--- a/public/styles.css
+++ b/public/styles.css
@@ -203,12 +203,6 @@
   }
 }
 @layer utilities {
-  .pointer-events-auto {
-    pointer-events: auto;
-  }
-  .pointer-events-none {
-    pointer-events: none;
-  }
   .absolute {
     position: absolute;
   }
@@ -217,9 +211,6 @@
   }
   .relative {
     position: relative;
-  }
-  .inset-0 {
-    inset: calc(var(--spacing) * 0);
   }
   .-top-0 {
     top: calc(var(--spacing) * -0);
@@ -236,9 +227,6 @@
   .right-4 {
     right: calc(var(--spacing) * 4);
   }
-  .bottom-0 {
-    bottom: calc(var(--spacing) * 0);
-  }
   .-left-0 {
     left: calc(var(--spacing) * -0);
   }
@@ -253,12 +241,6 @@
   }
   .z-1 {
     z-index: 1;
-  }
-  .z-30 {
-    z-index: 30;
-  }
-  .z-40 {
-    z-index: 40;
   }
   .z-50 {
     z-index: 50;
@@ -323,29 +305,17 @@
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
   }
-  .mt-8 {
-    margin-top: calc(var(--spacing) * 8);
-  }
   .mt-12 {
     margin-top: calc(var(--spacing) * 12);
   }
-  .mt-16 {
-    margin-top: calc(var(--spacing) * 16);
-  }
-  .mb-2 {
-    margin-bottom: calc(var(--spacing) * 2);
-  }
-  .mb-3 {
-    margin-bottom: calc(var(--spacing) * 3);
+  .mt-25 {
+    margin-top: calc(var(--spacing) * 25);
   }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
-  .mb-6 {
-    margin-bottom: calc(var(--spacing) * 6);
-  }
-  .mb-8 {
-    margin-bottom: calc(var(--spacing) * 8);
+  .mb-26 {
+    margin-bottom: calc(var(--spacing) * 26);
   }
   .block {
     display: block;
@@ -356,17 +326,17 @@
   .hidden {
     display: none;
   }
-  .inline-block {
-    display: inline-block;
-  }
   .inline-flex {
     display: inline-flex;
+  }
+  .table {
+    display: table;
   }
   .h-48 {
     height: calc(var(--spacing) * 48);
   }
-  .h-58\.5 {
-    height: calc(var(--spacing) * 58.5);
+  .h-58 {
+    height: calc(var(--spacing) * 58);
   }
   .h-\[30px\] {
     height: 30px;
@@ -398,17 +368,14 @@
   .h-\[400px\] {
     height: 400px;
   }
+  .h-auto {
+    height: auto;
+  }
   .h-full {
     height: 100%;
   }
-  .min-h-screen {
-    min-height: 100vh;
-  }
   .w-64 {
     width: calc(var(--spacing) * 64);
-  }
-  .w-80 {
-    width: calc(var(--spacing) * 80);
   }
   .w-\[30px\] {
     width: 30px;
@@ -437,14 +404,14 @@
   .w-full {
     width: 100%;
   }
-  .max-w-4xl {
-    max-width: var(--container-4xl);
+  .max-w-\[400px\] {
+    max-width: 400px;
   }
   .max-w-xl {
     max-width: var(--container-xl);
   }
-  .min-w-max {
-    min-width: max-content;
+  .flex-1 {
+    flex: 1;
   }
   .flex-1\/2 {
     flex: calc(1/2 * 100%);
@@ -452,17 +419,26 @@
   .flex-1\/5 {
     flex: calc(1/5 * 100%);
   }
+  .flex-4 {
+    flex: 4;
+  }
   .flex-4\/6 {
     flex: calc(4/6 * 100%);
   }
   .flex-shrink {
     flex-shrink: 1;
   }
+  .basis-3 {
+    flex-basis: calc(var(--spacing) * 3);
+  }
   .basis-3\/10 {
     flex-basis: calc(3/10 * 100%);
   }
   .basis-\[90\%\] {
     flex-basis: 90%;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .translate-x-0 {
     --tw-translate-x: calc(var(--spacing) * 0);
@@ -478,8 +454,8 @@
   .cursor-pointer {
     cursor: pointer;
   }
-  .flex-col {
-    flex-direction: column;
+  .resize {
+    resize: both;
   }
   .flex-row {
     flex-direction: row;
@@ -498,9 +474,6 @@
   }
   .items-start {
     align-items: flex-start;
-  }
-  .justify-around {
-    justify-content: space-around;
   }
   .justify-between {
     justify-content: space-between;
@@ -542,13 +515,6 @@
       margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
-  .space-y-8 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 8) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 8) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
   .space-y-12 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
@@ -566,12 +532,6 @@
   .overflow-hidden {
     overflow: hidden;
   }
-  .overflow-x-auto {
-    overflow-x: auto;
-  }
-  .rounded {
-    border-radius: 0.25rem;
-  }
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
@@ -585,21 +545,6 @@
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .border-t {
-    border-top-style: var(--tw-border-style);
-    border-top-width: 1px;
-  }
-  .border-b {
-    border-bottom-style: var(--tw-border-style);
-    border-bottom-width: 1px;
-  }
-  .border-l {
-    border-left-style: var(--tw-border-style);
-    border-left-width: 1px;
-  }
-  .border-gray-700 {
-    border-color: var(--color-gray-700);
-  }
   .bg-\[\#0A192F\] {
     background-color: #0A192F;
   }
@@ -609,11 +554,23 @@
   .bg-\[\#0c0F14\] {
     background-color: #0c0F14;
   }
+  .bg-\[\#6d788d\] {
+    background-color: #6d788d;
+  }
+  .bg-\[\#010e25\] {
+    background-color: #010e25;
+  }
+  .bg-\[\#0043b6\] {
+    background-color: #0043b6;
+  }
   .bg-\[\#161F83\] {
     background-color: #161F83;
   }
   .bg-\[\#161d2b\] {
     background-color: #161d2b;
+  }
+  .bg-\[\#4971bb\] {
+    background-color: #4971bb;
   }
   .bg-\[\#121720\] {
     background-color: #121720;
@@ -621,20 +578,14 @@
   .bg-\[\#D9D9D9\] {
     background-color: #D9D9D9;
   }
-  .bg-black {
-    background-color: var(--color-black);
+  .bg-\[\#d3dbe9\] {
+    background-color: #d3dbe9;
   }
-  .bg-blue-600 {
-    background-color: var(--color-blue-600);
+  .bg-\[\#ffffff\] {
+    background-color: #ffffff;
   }
   .bg-gray-100 {
     background-color: var(--color-gray-100);
-  }
-  .bg-gray-600 {
-    background-color: var(--color-gray-600);
-  }
-  .bg-gray-700 {
-    background-color: var(--color-gray-700);
   }
   .bg-gray-800 {
     background-color: var(--color-gray-800);
@@ -642,29 +593,14 @@
   .bg-gray-900 {
     background-color: var(--color-gray-900);
   }
-  .bg-green-600 {
-    background-color: var(--color-green-600);
-  }
-  .bg-purple-600 {
-    background-color: var(--color-purple-600);
-  }
   .object-contain {
     object-fit: contain;
   }
   .object-cover {
     object-fit: cover;
   }
-  .p-2 {
-    padding: calc(var(--spacing) * 2);
-  }
-  .p-4 {
-    padding: calc(var(--spacing) * 4);
-  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
-  }
-  .p-8 {
-    padding: calc(var(--spacing) * 8);
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -675,14 +611,14 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
-  .px-5 {
-    padding-inline: calc(var(--spacing) * 5);
-  }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
   }
   .px-96 {
     padding-inline: calc(var(--spacing) * 96);
+  }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
   }
   .py-0\.5 {
     padding-block: calc(var(--spacing) * 0.5);
@@ -695,9 +631,6 @@
   }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
-  }
-  .py-3 {
-    padding-block: calc(var(--spacing) * 3);
   }
   .py-4 {
     padding-block: calc(var(--spacing) * 4);
@@ -738,9 +671,6 @@
   .pe-16 {
     padding-inline-end: calc(var(--spacing) * 16);
   }
-  .pt-0\.5 {
-    padding-top: calc(var(--spacing) * 0.5);
-  }
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
   }
@@ -759,6 +689,12 @@
   .pt-8 {
     padding-top: calc(var(--spacing) * 8);
   }
+  .pt-9 {
+    padding-top: calc(var(--spacing) * 9);
+  }
+  .pt-11 {
+    padding-top: calc(var(--spacing) * 11);
+  }
   .pt-12 {
     padding-top: calc(var(--spacing) * 12);
   }
@@ -768,14 +704,29 @@
   .pt-16 {
     padding-top: calc(var(--spacing) * 16);
   }
+  .pt-18 {
+    padding-top: calc(var(--spacing) * 18);
+  }
   .pt-20 {
     padding-top: calc(var(--spacing) * 20);
   }
   .pt-24 {
     padding-top: calc(var(--spacing) * 24);
   }
+  .pt-25 {
+    padding-top: calc(var(--spacing) * 25);
+  }
+  .pt-26 {
+    padding-top: calc(var(--spacing) * 26);
+  }
+  .pt-28 {
+    padding-top: calc(var(--spacing) * 28);
+  }
   .pt-30 {
     padding-top: calc(var(--spacing) * 30);
+  }
+  .pt-32 {
+    padding-top: calc(var(--spacing) * 32);
   }
   .pr-0 {
     padding-right: calc(var(--spacing) * 0);
@@ -794,9 +745,6 @@
   }
   .pb-4 {
     padding-bottom: calc(var(--spacing) * 4);
-  }
-  .pb-6 {
-    padding-bottom: calc(var(--spacing) * 6);
   }
   .pb-10 {
     padding-bottom: calc(var(--spacing) * 10);
@@ -887,16 +835,9 @@
     --tw-tracking: var(--tracking-wide);
     letter-spacing: var(--tracking-wide);
   }
-  .tracking-wider {
-    --tw-tracking: var(--tracking-wider);
-    letter-spacing: var(--tracking-wider);
-  }
   .tracking-widest {
     --tw-tracking: var(--tracking-widest);
     letter-spacing: var(--tracking-widest);
-  }
-  .whitespace-nowrap {
-    white-space: nowrap;
   }
   .text-\[\#231C2F\] {
     color: #231C2F;
@@ -907,26 +848,11 @@
   .text-\[\#c4c4c4\] {
     color: #c4c4c4;
   }
-  .text-blue-400 {
-    color: var(--color-blue-400);
-  }
-  .text-gray-300 {
-    color: var(--color-gray-300);
-  }
-  .text-gray-400 {
-    color: var(--color-gray-400);
-  }
   .text-gray-500 {
     color: var(--color-gray-500);
   }
   .text-gray-700 {
     color: var(--color-gray-700);
-  }
-  .text-green-400 {
-    color: var(--color-green-400);
-  }
-  .text-purple-400 {
-    color: var(--color-purple-400);
   }
   .text-white {
     color: var(--color-white);
@@ -934,28 +860,19 @@
   .italic {
     font-style: italic;
   }
-  .opacity-0 {
-    opacity: 0%;
-  }
-  .opacity-100 {
-    opacity: 100%;
+  .underline {
+    text-decoration-line: underline;
   }
   .shadow-md {
     --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
+  .outline {
+    outline-style: var(--tw-outline-style);
+    outline-width: 1px;
+  }
   .transition {
     transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .transition-colors {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
-  .transition-opacity {
-    transition-property: opacity;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
     transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
@@ -971,20 +888,6 @@
   .ease-in-out {
     --tw-ease: var(--ease-in-out);
     transition-timing-function: var(--ease-in-out);
-  }
-  .hover\:bg-gray-300 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-300);
-      }
-    }
-  }
-  .hover\:bg-gray-800 {
-    &:hover {
-      @media (hover: hover) {
-        background-color: var(--color-gray-800);
-      }
-    }
   }
   .hover\:text-gray-300 {
     &:hover {
@@ -1032,6 +935,16 @@
       padding-inline-end: calc(var(--spacing) * 6);
     }
   }
+  .end\:pt-12 {
+    @media (width >= 300px) {
+      padding-top: calc(var(--spacing) * 12);
+    }
+  }
+  .end\:pt-22 {
+    @media (width >= 300px) {
+      padding-top: calc(var(--spacing) * 22);
+    }
+  }
   .smile\:ps-8 {
     @media (width >= 427px) {
       padding-inline-start: calc(var(--spacing) * 8);
@@ -1040,6 +953,26 @@
   .smile\:ps-10 {
     @media (width >= 427px) {
       padding-inline-start: calc(var(--spacing) * 10);
+    }
+  }
+  .smile\:pt-12 {
+    @media (width >= 427px) {
+      padding-top: calc(var(--spacing) * 12);
+    }
+  }
+  .smile\:pt-28 {
+    @media (width >= 427px) {
+      padding-top: calc(var(--spacing) * 28);
+    }
+  }
+  .smile\:pt-32 {
+    @media (width >= 427px) {
+      padding-top: calc(var(--spacing) * 32);
+    }
+  }
+  .smile\:pt-39 {
+    @media (width >= 427px) {
+      padding-top: calc(var(--spacing) * 39);
     }
   }
   .smile\:text-5xl {
@@ -1113,6 +1046,16 @@
   .tiny\:basis-\[47\%\] {
     @media (width >= 580px) {
       flex-basis: 47%;
+    }
+  }
+  .tiny\:pt-12 {
+    @media (width >= 580px) {
+      padding-top: calc(var(--spacing) * 12);
+    }
+  }
+  .tiny\:pt-32 {
+    @media (width >= 580px) {
+      padding-top: calc(var(--spacing) * 32);
     }
   }
   .tiny\:pt-40 {
@@ -1279,12 +1222,6 @@
       display: none;
     }
   }
-  .md\:text-5xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-5xl);
-      line-height: var(--tw-leading, var(--text-5xl--line-height));
-    }
-  }
 }
 @font-face {
   font-family: 'Etna';
@@ -1435,6 +1372,11 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
 @property --tw-duration {
   syntax: "*";
   inherits: false;
@@ -1473,6 +1415,7 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
+      --tw-outline-style: solid;
       --tw-duration: initial;
       --tw-ease: initial;
     }
